--- a/ourLeadership.html
+++ b/ourLeadership.html
@@ -26,14 +26,9 @@
                             <h3 class="text-white mt-3">Esther Wangui Gathiru</h3>
                             <h6 class="text-white">Founder & President</h6>
                             <p class="para-1">
-                                The feeling of having minimal resources for treatment and management is devastating. As a scoliosis 
-                                warrior, I was determined to create a foundation where scoliotic patients could get care and support 
-                                they needed.
-                            </p>
-                            <p class="para-1">
-                                I aim to promote public awareness and national wide education campaigns to highlight the vital 
-                                importance of early diagnosis, rehabilitation, treatment and management of scoliosis and spinal 
-                                deformities to dispel the fear and stigma
+                                Esther founded Scoliosis Foundation of Kenya in 2018 and launched it in 2019 while studying clinical 
+                                psychology, specifically researching Scoliosis and spine deformities in patients. She is also a scoliosis 
+                                warrior from 2017. She has had the opportunity to present KSF at national and international conferences.
                             </p>
                         </div>
 
@@ -49,20 +44,14 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-md-6" data-aos="fade-right">
-                            <img src="images/co-founder.jpg" alt="Founder" class="mt-3 mb-3">
+                            <img src="images/cofounder.jpeg" alt="Founder" class="mt-3 mb-3">
                         </div>
                         <div class="col-md-6" data-aos="fade-left">
                             <h3 class="mt-3">Andrea Lebel</h3>
                             <h6 class="text-muted">Co-Founder</h6>
                             <p class="para-1">
-                                The feeling of having minimal resources for treatment and management is devastating. As a scoliosis 
-                                warrior, I was determined to create a foundation where scoliotic patients could get care and support 
-                                they needed.
-                            </p>
-                            <p class="para-1">
-                                I aim to promote public wareness and national wide education campaigns to highlight the vital 
-                                importance of early diagnosis, rehabilitation, treatment and management of scoliosis and sspinal 
-                                deformities to dispel the frar and stigma
+                                Andrea Lebel is a PT 35 years and an international instructor in Physiotherapy Scoliosis Specific Exercise (PSSE).
+                                She also is operaing and offering Scoliosis Physiotherapy posture and rehabilitation center. She is also a member and the secretary of Sosort. 
                             </p>
                         </div>
                     </div>
