--- a/eventDetails.html
+++ b/eventDetails.html
@@ -6,8 +6,11 @@
         <meta http-equiv="X-UA_Compatible" content="ie=edge">
         <title>Kenya Scoliosis Foundation</title>
 
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+        <link rel="stylesheet"
+              href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+              integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+              crossorigin="anonymous">
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
         <link rel="stylesheet" href="css/style.css">
 
         <!--For icons-->
@@ -15,64 +18,71 @@
     </head>
 
     <body>
-        <div id="navbarDiv"></div>
+    <div id="navbarDiv"></div>
 
-        <main>
-            <!--Section 19-->
-            <div class="section-19">
-                <div class="container ">
-                    <div class="row justify-content-center">
-                        <div class="col-md-12">
-                            <div class="card">
-                                <img src="images/img8.jpg" alt="types Of Scoliosis" class="card-img-top" data-aos="fade">
-                                <div class="card-body" data-aos="fade">
-                                    <h2 class="card-title heading-1">Event Name</h2>
-                                    <h3 class="card-title subtitles"><span class="ml-2">Time & Location</span></h3>
-                                    <p class="card-text">
-                                        <i class="fas fa-calendar-week"></i> <span>Date</span>
-                                        <i class="fas fa-clock ml-3"></i> <span>Time</span>
-                                        <br>
-                                        <i class="fas fa-map-marker-alt"></i> <span>Venue</span>
-                                        <i class="fas fa-ticket-alt ml-3"></i> Kshs <span>2,000</span>
-                                    </p>
-                                    <h3 class="card-title subtitles"><span class="ml-3">About the Event:</span></h3>
-                                    <p class="card-text">
-                                        This is your event description. Use this space to provide a brief summary of the event, 
-                                        as well as any additional information so attendees know what's in store.
-                                        <br>
-                                        Consider adding details such as what’s on the agenda, special recommended attire, 
-                                        and other relevant information that would be helpful for guests. 
-                                        For any speakers that will be presenting at your event, this is a great opportunity to 
-                                        describe the topics covered or include a short bio. If the event is geared towards a specific type of audience, 
-                                        make sure to note that here.
-                                    </p>
-                                    <div class="text-center">
-                                        <a href="rsvp.html"><input type="button" value="RSVP" class="btn"></a>
-                                    </div>
-                                    <!--Google maps-->
-                                    <div class="map-container z-depth-1-half" id="map" style="height: 500px;"></div>
+    <main>
+        <!--Section 19-->
+        <div class="section-19">
+            <div class="container ">
+                <div class="row justify-content-center">
+                    <div class="col-md-12">
+                        <div class="card">
+                            <img src="images/img8.jpg" alt="types Of Scoliosis" class="card-img-top event-image"
+                                 data-aos="fade">
+                            <div class="card-body" data-aos="fade">
+                                <h2 class="card-title heading-1 event-name">...</h2>
+                                <h3 class="card-title subtitles"><span
+                                        class="ml-2">Time & Location</span></h3>
+                                <p class="card-text">
+                                    <i class="fas fa-calendar-week"></i> <span class="event-date">...</span>
+                                    <i class="fas fa-clock ml-3"></i> <span
+                                        class="event-time">...</span>
+                                    <br>
+                                    <i class="fas fa-map-marker-alt"></i> <span
+                                        class="event-location">...</span>
+                                    <i class="fas fa-ticket-alt ml-3"></i> <span
+                                        class="event-amount">...</span>
+                                </p>
+                                <h3 class="card-title subtitles"><span
+                                        class="ml-3">About the Event:</span></h3>
+                                <p class="card-text event-description">
+                                    ...
+                                </p>
+                                <div class="text-center">
+                                    <a href="rsvp.html"><input type="button" value="RSVP"
+                                                               class="btn"></a>
                                 </div>
+                                <!--Google maps-->
+                                <div class="map-container z-depth-1-half" id="map"
+                                     style="height: 500px;"></div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </main>
+        </div>
+    </main>
 
-        <div id="footer"></div>
+    <div id="footer"></div>
     </body>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="js/animation.js" type="text/javascript"></script>
     <script src="js/jquery-3.5.0.js" type="text/javascript"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-        $(function(){
-            $('#navbarDiv').load( 'Navigation.html' );
-            $("#footer").load('footer.hmtl');
+        $(function () {
+            $('#navbarDiv').load('Navigation.html');
+            $("#footer").load('footer.html');
         });
 
         AOS.init({
@@ -82,16 +92,47 @@
     </script>
 
     <!--Google maps API-->
-    <script>
-        var map;
-        function initMap() {
-          map = new google.maps.Map(document.getElementById('map'), {
-            center: {lat: -34.397, lng: 150.644},
-            zoom: 8
-          });
+<!--    <script>-->
+<!--        var map;-->
+
+<!--        function initMap() {-->
+<!--            map = new google.maps.Map(document.getElementById('map'), {-->
+<!--                center: {lat: -34.397, lng: 150.644},-->
+<!--                zoom: 8-->
+<!--            });-->
+<!--        }-->
+
+<!--    </script>-->
+<!--    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkUOdZ5y7hMm0yrcCQoCvLwzdM6M8s5qk&callback=initMap"-->
+<!--            async defer></script>-->
+
+    <style>
+        .loading-overlay {
+            z-index: 9999;
+            position: fixed;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            display: block;
+            text-align: center;
+            background: rgba(0, 0, 0, 0.2) url("images/loading.gif") no-repeat center;
         }
-        
-      </script>
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkUOdZ5y7hMm0yrcCQoCvLwzdM6M8s5qk&callback=initMap"
-      async defer></script>
+    </style>
+    <div class="loading-overlay" style="display: none"></div>
+    <script
+            src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
+    <script>
+        const page = 'home';
+    </script>
+    <script src="app/main.js"></script>
+    <script src="app/event.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-izJWjjI0o3W2b7CG2QjpBVq4nrQ_IMI&callback=initMap"
+            async defer></script>
 </hmtl>
