--- a/donateCreditCard.html
+++ b/donateCreditCard.html
@@ -25,7 +25,7 @@
                             <div class="row">
                                 <!--Side Content-->
                                 <div class="col-md-4">
-                                    <div class="card" data-aos="fade">
+                                    <div class="card project" data-aos="fade">
                                         <div class="card-body">
                                             <h4 class="text-center mb-1">Project Name</h4>
                                             <hr>
@@ -38,7 +38,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="card" data-aos="fade">
+                                    <div class="card accountability" data-aos="fade">
                                         <div class="card-body">
                                             <h4 class="text-center mb-2">Finance Accountability</h4>
                                             <p class="para-1">
@@ -52,7 +52,7 @@
                                             </p>
                                         </div>
                                     </div>
-                                    <div class="card" data-aos="fade">
+                                    <div class="card donateMail" data-aos="fade">
                                         <div class="card-body">
                                             <h4 class="text-center mb-2">Give by Mail</h4>
                                             <p class="para-1">
@@ -73,8 +73,8 @@
                                 </div>
 
                                 <!--Donation Section-->
-                                <div class="col-md-8">
-                                    <div class="card" data-aos="fade-left">
+                                <div class="col-md-8donateForm">
+                                    <div class="card " data-aos="fade-left">
                                         <h1 class="text-center mt-3 heading">Donate</h1>
                                         <p class="para-1 mt-3 px-4">
                                             Give a gift of your choice. 
