--- a/donnateMpesa.html
+++ b/donnateMpesa.html
@@ -25,7 +25,7 @@
                             <div class="row">
                                 <!--Side Content-->
                                 <div class="col-md-4">
-                                    <div class="card" data-aos="fade">
+                                    <div class="card project" data-aos="fade">
                                         <div class="card-body">
                                             <h4 class="text-center mb-1">Project Name</h4>
                                             <hr>
