--- a/facilitation.html
+++ b/facilitation.html
@@ -50,7 +50,7 @@
     <script>
         $(function(){
             $('#navbarDiv').load( 'Navigation.html' );
-            $("#footer").load('footer.hmtl');
+            $("#footer").load('footer.html');
         });
 
         AOS.init({
