--- a/ourGoals.html
+++ b/ourGoals.html
@@ -58,7 +58,7 @@
     <script>
         $(function(){
             $('#navbarDiv').load( 'Navigation.html' );
-            $("#footer").load('footer.hmtl');
+            $("#footer").load('footer.html');
         });
         
         AOS.init({
