--- a/ourMission.html
+++ b/ourMission.html
@@ -54,7 +54,7 @@
     <script>
         $(function(){
             $('#navbarDiv').load( 'Navigation.html' );
-            $("#footer").load('footer.hmtl');
+            $("#footer").load('footer.html');
         });
         
         AOS.init({
