--- a/ourWork.html
+++ b/ourWork.html
@@ -56,7 +56,7 @@
     <script>
         $(function(){
             $('#navbarDiv').load( 'Navigation.html' );
-            $("#footer").load('footer.hmtl');
+            $("#footer").load('footer.html');
         });
         
         AOS.init({
