--- a/scoliosisAwarenessMonth.html
+++ b/scoliosisAwarenessMonth.html
@@ -154,7 +154,7 @@
     <script>
         $(function(){
             $('#navbarDiv').load( 'Navigation.html' );
-            $("#footer").load('footer.hmtl');
+            $("#footer").load('footer.html');
         });
         
         AOS.init({
