--- a/footer.html
+++ b/footer.html
@@ -13,6 +13,9 @@
                 <a href="https://www.facebook.com/KenyaScoliosisFoundation/?referrer=whatsapp">
                     <i class="fab fa-facebook-f m-2"></i>
                 </a>
+                <a href="https://www.instagram.com/scoliosiskf/">
+                    <i class="fab fa-instagram m-2"></i>
+                </a>
                 <a href="https://twitter.com/ScoliosisKenya?s=08">
                     <i class="fab fa-twitter m-2"></i>
                 </a>
