--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
         <!--Section 3 Pillars of Scoliosis-->
         <div class="section-3">
             <div class="container text-center">
-                <h1 class="heading-1" data-aos="fade">Pillars of Scoliosis</h1>
+                <h1 class="heading-1" data-aos="fade-in">Pillars of Scoliosis</h1>
                 <div class="row justify-content-center">
 
                     <!--Training and awareness-->
-                    <div class="col-md-4" data-aos="fade-right">
+                    <div class="col-md-4" data-aos="fade-in">
                         <div class="d-flex flex-row">
                             <i class="fas fa-book-open fa-3x m-2"></i>
                             <div class="d-flex flex-column">
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                     <!--Awareness Campaign-->
-                    <div class="col-md-4" data-aos="fade-up">
+                    <div class="col-md-4" data-aos="fade-in">
                         <div class="d-flex flex-row">
                             <i class="fas fa-info-circle fa-3x m-2"></i>
                             <div class="d-flex flex-column">
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                     <!--Research on Scoliosis-->
-                    <div class="col-md-4" data-aos="fade-left">
+                    <div class="col-md-4" data-aos="fade-in">
                         <div class="d-flex flex-row">
                             <i class="fas fa-search fa-3x m-2"></i>
                             <div class="d-flex flex-column">
@@ -126,7 +126,7 @@
                     </div>
                     <br><br><br><br><br>
                     <!--Screening and management of scoliosis-->
-                    <div class="col-md-4" data-aos="fade-right">
+                    <div class="col-md-4" data-aos="fade-in">
                         <div class="d-flex flex-row">
                             <i class="fas fa-user-md fa-3x m-2"></i>
                             <div class="d-flex flex-column">
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <!--Advocacy-->
-                    <div class="col-md-4" data-aos="fade-left">
+                    <div class="col-md-4" data-aos="fade-in">
                         <div class="d-flex flex-row">
                             <i class="fas fa-question fa-3x m-2"></i>
                             <div class="d-flex flex-column">
@@ -168,8 +168,8 @@
         <!--Section 5 Upcomming Events-->
         <div class="section-5">
             <div class="container text-center">
-                <h1 class="heading-1" data-aos="fade">Upcoming Events</h1>
-                <p class="para-1" data-aos="fade">
+                <h1 class="heading-1" data-aos="fade-in">Upcoming Events</h1>
+                <p class="para-1" data-aos="fade-in">
                     We have a host of wonderful events lined up for the year ahead that help raise
                     funds and awareness
                     for Scoliosis. Whether you are an artist, a runner, a walker or a cyclist there
