--- a/scoliosisAwarenessMonth.html
+++ b/scoliosisAwarenessMonth.html
@@ -59,83 +59,9 @@
                 <div class="container text-center">
                     <h1 class="heading-1" data-aos="fade">Upcoming Events</h1>
                     
-                    <div class="row justify-content-center text-center">
-                        <!--The first card-->
-                        <div class="col-md-4" data-aos="fade-right">
-                            <div class="card card-1">
-                                <img src="images/img4.jpg" alt="img1" class="card-img-top">
-                                <div class="card-body">
-                                    <h4 class="card-title">Event</h4>
-                                    <p class="card-text">
-                                        <i class="fas fa-calendar-week"></i> Date 
-                                        <i class="fas fa-clock ml-2"></i> Time
-                                        <br> 
-                                        <i class="fas fa-map-marker-alt"></i> Venue
-                                        <i class="fas fa-ticket-alt ml-2"></i> Kshs <span>2,000</span>
-                                    </p>
-                                    <label for="" class="card-text details">
-                                        We have a host of wonderful events ined up for the year ahead that help raise funds and awereness 
-                                        for Scoliosis. Whether you are an artist, a runner, a walker or a cyclist there are lots of things 
-                                        you can get involved with.
-                                    </label>
-                                    <br>
-                                    <a href="eventDetails.html">
-                                        <input type="button" value="RSVP" class="btn">
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <!--The second card-->
-                        <div class="col-md-4" data-aos="fade-up">
-                            <div class="card card-2">
-                                <img src="images/img4.jpg" alt="img1" class="card-img-top">
-                                <div class="card-body">
-                                    <h4 class="card-title">Event</h4>
-                                    <p class="card-text">
-                                        <i class="fas fa-calendar-week"></i> Date 
-                                        <i class="fas fa-clock ml-2"></i> Time
-                                        <br> 
-                                        <i class="fas fa-map-marker-alt"></i> Venue
-                                        <i class="fas fa-ticket-alt ml-2"></i> Kshs <span>2,000</span>
-                                    </p>
-                                    <label for="" class="card-text details">
-                                        We have a host of wonderful events ined up for the year ahead that help raise funds and awereness 
-                                        for Scoliosis. Whether you are an artist, a runner, a walker or a cyclist there are lots of things 
-                                        you can get involved with.
-                                    </label>
-                                    <br>
-                                    <a href="eventDetails.html">
-                                        <input type="button" value="RSVP" class="btn">
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <!--The Third card-->
-                        <div class="col-md-4" data-aos="fade-left">
-                            <div class="card card-3">
-                                <img src="images/img4.jpg" alt="img1" class="card-img-top">
-                                <div class="card-body">
-                                    <h4 class="card-title">Event</h4>
-                                    <p class="card-text">
-                                        <i class="fas fa-calendar-week"></i> Date 
-                                        <i class="fas fa-clock ml-2"></i> Time
-                                        <br> 
-                                        <i class="fas fa-map-marker-alt"></i> Venue
-                                        <i class="fas fa-ticket-alt ml-2"></i> Kshs <span>2,000</span>
-                                    </p>
-                                    <label for="" class="card-text details">
-                                        We have a host of wonderful events ined up for the year ahead that help raise funds and awereness 
-                                        for Scoliosis. Whether you are an artist, a runner, a walker or a cyclist there are lots of things 
-                                        you can get involved with.
-                                    </label>
-                                    <br>
-                                    <a href="eventDetails.html">
-                                        <input type="button" value="RSVP" class="btn">
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="row justify-content-center text-center" id="events-container">
+
+                    </div>    
                     
                 </div>
             </div>
