--- a/scoliosisAwarenessMonth.html
+++ b/scoliosisAwarenessMonth.html
@@ -88,5 +88,34 @@
             duration: 800
         });
     </script>
+
+    <style>
+        .loading-overlay {
+            z-index: 9999;
+            position: fixed;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            display: block;
+            text-align: center;
+            background: rgba(0, 0, 0, 0.2) url("images/loading.gif") no-repeat center;
+        }
+    </style>
+    <div class="loading-overlay" style="display: none"></div>
+    <script
+            src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
+    <script>
+        const page = 'home';
+    </script>
+    <script src="app/main.js"></script>
+    <script src="app/event.js"></script>
+    <script src="app/story.js"></script>
     
 </hmtl>
