--- a/Navigation.html
+++ b/Navigation.html
@@ -20,7 +20,7 @@
                         <a href="ourMission.html" class="dropdown-item">Our Mission</a>
                         <a href="ourGoals.html" class="dropdown-item">Our Goals & Values</a>
                         <a href="ourLeadership.html" class="dropdown-item">Our Leadership</a>
-                        <a href="scoliosisAwarenessMonth.html" class="dropdown-item">Aweareness Month</a>
+                        <a href="scoliosisAwarenessMonth.html" class="dropdown-item">Awareness Month</a>
                         <a href="finances.html" class="dropdown-item">Our Finances</a>
                         <a href="facilitation.html" class="dropdown-item">Facilitation</a>
                     </div>
