--- a/donnateMpesa.html
+++ b/donnateMpesa.html
@@ -116,23 +116,14 @@
                                             <div class="form-group"></div>
 
                                             <div class="form-group">
+                                                <label for="donorPhoneNumber" class="text-muted">Phone Number</label> <br>
+                                                <input type="tel" placeholder="Phone number" id="donorPhoneNumber" class="form-control" required>
+                                            </div>
+
+                                            <div class="form-group">
                                                 <label for="donorEmail" class="text-muted">Email</label> <br>
                                                 <input type="text" placeholder="Email" id="donorEmail" class="form-control" required>
                                             </div>
-
-                                            <h6 class="mt-4">Please follow the process below:</h6>
-                                            <p>
-                                                <ol class="para-1">
-                                                    <li>Go to your M-PESA menu</li>
-                                                    <li>Select Lipa na M-PESA</li>
-                                                    <li>Select Buy Goods and Services</li>
-                                                    <li>Enter Till Number: <strong>"5154883"</strong></li>
-                                                    <li>Enter Amount: <strong id="mpesaAmount">"KES "</strong></li>
-                                                    <li>Enter Your M-PESA pin</li>
-                                                    <li>Confirm payment/ transaction</li>
-                                                    <li>Done!</li>
-                                                </ol>
-                                            </p>
 
                                             <div class="form-group"></div>
                                             <div class="mb-3">
