--- a/footer.html
+++ b/footer.html
@@ -5,7 +5,7 @@
 
         <div class="form-inline justify-content-center">
             <input type="text" value="Email" id="email" placeholder="Email" size="40" class="form-control px-4 py-2">
-            <input type="button" value="Subscribe" class="btn px-4 py-2">
+            <input type="button" value="Subscribe" class="btn px-4 py-2 ml-2">
         </div>
 
         <div class="social" style="margin: 5%;">
