--- a/scoliosisAwarenessMonth.html
+++ b/scoliosisAwarenessMonth.html
@@ -26,7 +26,7 @@
                             <img src="images/ourWork.JPG" alt="img2" width="590" class="mt-5">
                         </div>
                         <div class="col-md-5" data-aos="fade-left">
-                            <h1 class="text-white">Scoliosis Aweareness Month</h1>
+                            <h1 class="text-white">Scoliosis Awareness Month</h1>
                             <a href="donateCreditCard.html">Help Us</a>
                             <p class="para-1">
                                 The Kenya Scoliosis Foundation (KSF) welcomes you to explore this website 
