--- a/whatIsScoliosis.html
+++ b/whatIsScoliosis.html
@@ -57,7 +57,7 @@
     <script>
         $(function(){
             $('#navbarDiv').load( 'Navigation.html' );
-            $("#footer").load('footer.hmtl');
+            $("#footer").load('footer.html');
         });
         
         AOS.init({
