--- a/facilitation.html
+++ b/facilitation.html
@@ -28,6 +28,7 @@
                         <div class="col-md-5" data-aos="fade-left">
                             <h1 class="text-white">Where we do our Facilitation</h1>
                             <p class="para-1">
+                                <li>Our Recourse Centers</li>
                                 <li>Physiotherapy Centres and Hospitals</li>
                                 <li>Universities and Educational Institutes</li>
                             </p>
