--- a/finances.html
+++ b/finances.html
@@ -30,7 +30,7 @@
                                     Offering monitored specific schroth method exercises, Bracing and Surgery where necessary.
                                 </li>
                                 <li>School Screening Programs: Across the 47 counties</li>
-                                <li>Education Programs</li>
+                                <li>Educational Programs</li>
                                 <li>Awareness Campaign</li>
                                 <li>Facilitate Research and Advocacy</li>
                                 <li>Create a Resource Centre (Scoliosis and Spine Centre)</li>
