--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                         <h1 class="text-white">What We Do</h1>
                         <a href="donateCreditCard.html">Help Us</a>
                         <p class="para-1">
-                            Kenya Scoliosis Foundation (KSF) aims to educating, screening and
-                            creating awareness of Scoliosis
-                            in our community. Our goal is treating the condition with bracing,
+                            Scoliosis Foundation (KSF) aims to educate, screen and create awareness of Scoliosis in our
+                            community.
+                            Our goal is treating the condition with bracing,
                             surgery and providing physiotherapy
                             where necessary.
                             In Kenya, as it is in may parts of the world, treating scoliosis is
@@ -209,15 +209,6 @@
         <div class="section-7">
             <div class="container text-center">
                 <h1 class="heading-1" data-aos="fade">Our Stories</h1>
-                <p class="para-1" data-aos="fade">
-                    We have a host of wonderful events lined up for the year ahead that help raise
-                    funds and awareness
-                    for Scoliosis. Whether you are an artist, a runner, a walker or a cyclist there
-                    are lots of things
-                    you can get involved with. We also have talks, exhibitions and sales and dinners
-                    so there is something
-                    for everyone!
-                </p>
                 <div class="row justify-content-center text-center" id="stories-container">
 
                 </div>
