--- a/ourGoals.html
+++ b/ourGoals.html
@@ -38,7 +38,7 @@
                         </div>
 
                         <div class="col-md-7" data-aos="fade-left">
-                            <img src="images/goals&values.JPG" alt="ourGoals" width="590px" class="mt-3 mb-3">
+                            <img src="images/ourGoals.jpeg" alt="ourGoals" width="590px" class="mt-3 mb-3">
                         </div>
                     </div>
                 </div>
