--- a/ourLeadership.html
+++ b/ourLeadership.html
@@ -26,7 +26,7 @@
                             <h3 class="text-white mt-3">Esther Wangui Gathiru</h3>
                             <h6 class="text-white">Founder & President</h6>
                             <p class="para-1">
-                                Esther founded Scoliosis Foundation of Kenya in 2018 and launched it in 2019 while studying clinical 
+                                Esther founded Scoliosis Foundation in Kenya (KSF) in 2018 and launched it in 2019 while studying clinical 
                                 psychology, specifically researching Scoliosis and spine deformities in patients. She is also a scoliosis 
                                 warrior from 2017. She has had the opportunity to present KSF at national and international conferences.
                             </p>
@@ -50,8 +50,9 @@
                             <h3 class="mt-3">Andrea Lebel</h3>
                             <h6 class="text-muted">Co-Founder</h6>
                             <p class="para-1">
-                                Andrea Lebel is a PT 35 years and an international instructor in Physiotherapy Scoliosis Specific Exercise (PSSE).
-                                She also is operaing and offering Scoliosis Physiotherapy posture and rehabilitation center. She is also a member and the secretary of Sosort. 
+                                Andrea Lebel is a MSC PT, Schroth PT and BSPTS international instructor in Physiotherapy Scoliosis Specific Exercise (PSSE).
+                                She also is operaing and offering Scoliosis Physiotherapy posture and rehabilitation center. She is a member and the secretary of Sosort. 
+                                <a href="http://www.scoliosisandspineonlinelearning.com/">SSOL Co-founder</a>
                             </p>
                         </div>
                     </div>
