--- a/ourMission.html
+++ b/ourMission.html
@@ -28,7 +28,7 @@
                         <div class="col-md-5" data-aos="fade-left">
                             <h1 class="text-white mt-3">Our Mission</h1>
                             <p class="para-1">
-                                <strong>Kenya Scoliosis Foundation</strong> was created to promote public awareness, screening, research, train nationwide, 
+                                <strong>The Scoliosis Foundation</strong> (KSF) was created to promote public awareness, screening, research, train nationwide, 
                                 Educational campaigns to highlight the vital importance of early diagnosis and management of children and adults suffering 
                                 from disabling and debilitating condition. 
                             </p>
