--- a/ourWork.html
+++ b/ourWork.html
@@ -29,8 +29,9 @@
                             <h1 class="text-white">Our Work</h1>
                             <a href="donateCreditCard.html">Help Us</a>
                             <p class="para-1">
-                                Kenya Scoliosis Foundation (KSF) aims to educating, screening and creating awareness of Scoliosis 
-                                in our community. Our goal is treating the condition with bracing surgery and providing physiotherapy
+                                Scoliosis Foundation (KSF) aims to educate, screen and create awareness of Scoliosis in our
+                                community. 
+                                Our goal is treating the condition with bracing surgery and providing physiotherapy
                                 where necessary. 
                                 In Kenya, as it is in many parts of the world, treating scoliosis is exorbitantly expensive hence making 
                                 it less accessible to many. KSF aims at reducing the cost of treatment and management by forming a consortium
