--- a/rsvp.html
+++ b/rsvp.html
@@ -45,6 +45,10 @@
                                     <label for="phoneNumber" class="field">* Phone Number</label>
                                     <input type="text" class="form-control" id="phoneNumber" required>
                                 </div>
+                                <div class="form-group">
+                                    <label for="numberOfTickets" class="field">* Number of tickets</label>
+                                    <input type="number" class="form-control" id="numberOfTickets" required>
+                                </div>
                                 <button type="submit" class="btn w-100">Check Out</button>
                             </form> 
                         </div>
