--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<hmtl lang="en">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device, initial-scale=1.0">
@@ -33,7 +33,7 @@
                     <img src="images/Carosel1.JPG" class="d-block w-100" alt="carousel-image"
                          height="700">
                     <div class="carousel-caption d-none d-md-block">
-                        <h1>GO AHEAD OF THE CURVE</h5>
+                        <h1>GO AHEAD OF THE CURVE</h1>
                             <a href="whatIsScoliosis.html">
                                 <button class="btn border">Learn more</button>
                             </a>
@@ -43,7 +43,7 @@
                     <img src="images/carosel2.JPG" class="d-block w-100" alt="carousel-image"
                          height="700">
                     <div class="carousel-caption d-none d-md-block">
-                        <h1>BE A CHANCE MAKER</h5>
+                        <h1>BE A CHANCE MAKER</h1>
                             <a href="whatIsScoliosis.html">
                                 <button class="btn border">Learn more</button>
                             </a>
@@ -275,4 +275,4 @@
     <script src="app/event.js"></script>
     <script src="app/story.js"></script>
 
-</hmtl>
+</html>
