feat: event-rsvp

--- a/eventDetails.html
+++ b/eventDetails.html
@@ -27,7 +27,8 @@
                 <div class="row justify-content-center">
                     <div class="col-md-12">
                         <div class="card">
-                            <img src="images/img8.jpg" alt="types Of Scoliosis" class="card-img-top event-image"
+                            <img src="images/img8.jpg" alt="types Of Scoliosis"
+                                 class="card-img-top event-image"
                                  data-aos="fade">
                             <div class="card-body" data-aos="fade">
                                 <h2 class="card-title heading-1 event-name">...</h2>
@@ -49,8 +50,9 @@
                                     ...
                                 </p>
                                 <div class="text-center">
-                                    <a href="rsvp.html"><input type="button" value="RSVP"
-                                                               class="btn"></a>
+                                    <a class="rsvp-btn" href="rsvp.html"><input type="button"
+                                                                             value="RSVP"
+                                                                             class="btn"></a>
                                 </div>
                                 <!--Google maps-->
                                 <div class="map-container z-depth-1-half" id="map"
@@ -92,19 +94,19 @@
     </script>
 
     <!--Google maps API-->
-<!--    <script>-->
-<!--        var map;-->
+    <!--    <script>-->
+    <!--        var map;-->
 
-<!--        function initMap() {-->
-<!--            map = new google.maps.Map(document.getElementById('map'), {-->
-<!--                center: {lat: -34.397, lng: 150.644},-->
-<!--                zoom: 8-->
-<!--            });-->
-<!--        }-->
+    <!--        function initMap() {-->
+    <!--            map = new google.maps.Map(document.getElementById('map'), {-->
+    <!--                center: {lat: -34.397, lng: 150.644},-->
+    <!--                zoom: 8-->
+    <!--            });-->
+    <!--        }-->
 
-<!--    </script>-->
-<!--    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkUOdZ5y7hMm0yrcCQoCvLwzdM6M8s5qk&callback=initMap"-->
-<!--            async defer></script>-->
+    <!--    </script>-->
+    <!--    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkUOdZ5y7hMm0yrcCQoCvLwzdM6M8s5qk&callback=initMap"-->
+    <!--            async defer></script>-->
 
     <style>
         .loading-overlay {
