--- a/rsvpThankyou.html
+++ b/rsvpThankyou.html
@@ -25,7 +25,7 @@
                     <a href="index.html">
                         <p class="para-1 backToSite">Back to site</p>
                     </a>
-                    <button type="button" class="btn">Add to Calender</button>
+                    <button type="button" class="btn add-calendar-btn">Add to Calender</button>
                     <p class="para-1 shareSocial">Share</p>
                     <div class="social">
                         <div class="d-flex flex-row justify-content-center">
@@ -58,7 +58,7 @@
     <script>
         $(function(){
             $('#navbarDiv').load( 'Navigation.html' );
-            $("#footer").load('footer.hmtl');
+            $("#footer").load('footer.html');
         });
         
         AOS.init({
@@ -66,5 +66,34 @@
             duration: 800
         });
     </script>
+
+
+    <style>
+        .loading-overlay {
+            z-index: 9999;
+            position: fixed;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            display: block;
+            text-align: center;
+            background: rgba(0, 0, 0, 0.2) url("images/loading.gif") no-repeat center;
+        }
+    </style>
+    <div class="loading-overlay" style="display: none"></div>
+    <script
+            src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
+    <script>
+        const page = 'rsvp-thankyou';
+    </script>
+    <script src="app/main.js"></script>
+    <script src="app/event.js"></script>
     
 </hmtl>
