--- a/rsvp.html
+++ b/rsvp.html
@@ -31,24 +31,29 @@
                         <form id="rsvp-form">
                             <div class="form-group">
                                 <label for="name" class="field">* Name</label>
-                                <input type="text" class="form-control rsvp-name" name="name" id="name"
+                                <input type="text" class="form-control rsvp-name user-name"
+                                       name="name"
+                                       id="name"
                                        required>
                             </div>
                             <div class="form-group"></div>
                             <div class="form-group">
                                 <label for="emailAddress" class="field">* Email</label>
-                                <input type="text" class="form-control rsvp-email" name="email"
+                                <input type="text" class="form-control rsvp-email user-email"
+                                       name="email"
                                        id="emailAddress" required>
                             </div>
                             <div class="form-group">
                                 <label for="phoneNumber" class="field">* Phone Number</label>
-                                <input type="text" class="form-control rsvp-phone" name="phone"
+                                <input type="text" class="form-control rsvp-phone user-phone"
+                                       name="phone"
                                        id="phoneNumber" required>
                             </div>
                             <div class="form-group">
                                 <label for="numberOfTickets" class="field">* Number of
                                     tickets</label>
-                                <input type="number" class="form-control rsvp-tickets" name="tickets"
+                                <input type="number" class="form-control rsvp-tickets"
+                                       name="tickets"
                                        id="numberOfTickets"
                                        required>
                             </div>
