fix: reccuring donation

--- a/donateCreditCard.html
+++ b/donateCreditCard.html
@@ -24,10 +24,10 @@
         <div class="section-25">
             <div class="container-fluid">
                 <div class="card main-card mt-0">
-                    <div class="container">
+                    <div class="container-fluid">
                         <div class="row">
                             <!--Side Content-->
-                            <div class="col-md-4" id="active-project-container">
+                            <div class="col-md-3" id="active-project-container">
                                 <div class="card accountability" data-aos="fade">
                                     <div class="card-body">
                                         <h4 class="text-center mb-2">Finance Accountability</h4>
@@ -69,7 +69,7 @@
                             </div>
 
                             <!--Donation Section-->
-                            <div class="col-md-8 donateForm">
+                            <div class="col-md-6 donateForm">
                                 <div class="card " data-aos="fade-left">
                                     <h1 class="text-center mt-3 heading">Donate</h1>
                                     <p class="para-1 mt-3 px-4">
@@ -133,9 +133,42 @@
                                         </div>
 
                                         <button type="submit" class="btn btn-success mb-5"
-                                                id="creditCardDonate-btn">Donate
+                                                id="creditCardDonate-btn">Donate Once
+                                        </button>
+                                        <button type="submit" class="btn btn-success mb-5 ml-2"
+                                                id="creditCardDonate-btn">Donate Monthly
                                         </button>
                                     </form>
+                                </div>
+                            </div>
+
+                            <!-- Donate monthly -->
+                            <div class="col-md-3" id="active-project-container">
+                                <div class="card accountability" data-aos="fade">
+                                    <div class="card-body">
+                                        <h4 class="text-center mb-2">Donate Monthly</h4>
+                                        <p class="para-1">
+                                            Join our most committed group of scoliosis supporters! 
+                                            Become a scoliosis hope giver with your monthly gift today.
+                                            We support most vulnerable scoliosis families in our community.
+                                            Scoliosis Support Group makes small automatic donations every month which helps KSF plan long term,
+                                            budget more efficiently and create more life changing outcomes.
+                                            You choose how much to give and for how long and you can change your amount or cancel at any time.
+                                            Become a scoliosis supporter today
+                                            <br/><br/>
+                                            <strong>OTHER WAYS YOU CAN SUPPORT KSF</strong>
+                                            <br/>
+                                            <strong>1. Donate Equipment</strong>  <br/>
+                                            Donate equipment to our resource and rehabilitation center to help us support and manage many
+                                            patients.<br/>
+                                            <strong>2. Planned Giving </strong> <br/>
+                                            You can leave a legacy by planning your bequest to Scoliosis Kenya Foundation. You can put your
+                                            donation to work today and live a legacy for years to come.<br/>
+                                            <strong>3. Corporate giving</strong>  <br/>
+                                            We build customized partnership by working with corporations of all sizes, allowing you to give back to
+                                            your community through Scoliosis Kenya Foundation.
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
